--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,12 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+<!--
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyBbiMeIQ5o2RPCvqxcH1jdXr5LvNzwphTY"></script>
+-->
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbiMeIQ5o2RPCvqxcH1jdXr5LvNzwphTY"></script>
+
 </head>
 <body>
 
