--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,9 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Map
-    </ion-title>
-    <ion-buttons end>
-     <!--<button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>-->
-     <button on-swipe-left="onSwipeLeft()">Add Marker</button>
-    </ion-buttons>  
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Mapa</ion-title>  
   </ion-navbar>
 </ion-header>
  
