--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyBbiMeIQ5o2RPCvqxcH1jdXr5LvNzwphTY"></script>
 -->
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbiMeIQ5o2RPCvqxcH1jdXr5LvNzwphTY"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbiMeIQ5o2RPCvqxcH1jdXr5LvNzwphTY&libraries=places"></script>
 
 </head>
 <body>
