--- a/src/pages/route/route.html
+++ b/src/pages/route/route.html
@@ -16,21 +16,27 @@
       </button>
     </ion-buttons>
   </ion-navbar>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbiMeIQ5o2RPCvqxcH1jdXr5LvNzwphTY"></script>
+
 
 </ion-header>
 
 
 <ion-content padding>
-  
+
 
   <ion-list *ngIf="!hasResult()">
+
+
+
     <ion-item>
       <ion-label floating>Origem:</ion-label>
-      <ion-input [(ngModel)]="origin" value="{{origin | uppercase}}"></ion-input>
+      <ion-input [(ngModel)]="origin" value="{{origin | uppercase}}" (click)="showModal()"></ion-input>
+      <button ion-button (click)="showModal()" icon-right icon-only>
+        <ion-icon name="search"></ion-icon>
+      </button>
     </ion-item>
 
-    <ion-item *ngFor="let way of waypoints; let i = index;" >
+    <ion-item *ngFor="let way of waypoints; let i = index;">
       <ion-label floating>Ponto {{i+1}}:</ion-label>
       <ion-input [(ngModel)]="way.location" value="{{way.location | uppercase}}"></ion-input>
     </ion-item>
@@ -43,7 +49,7 @@
       <ion-label stacked>Destino é o mesmo local de origem?</ion-label>
       <ion-toggle (ionChange)="destinationIsOrigin()" [(ngModel)]="sameDestination"></ion-toggle>
     </ion-item>
-    <ion-item  class="button">
+    <ion-item class="button">
       <button ion-button (click)="routing()" round large>Calcular Rota</button>
     </ion-item>
   </ion-list>
@@ -57,15 +63,15 @@
       <ion-input [disabled]="true" value="{{origin | uppercase}}"></ion-input>
     </ion-item>
 
-    <ion-item *ngFor="let way of result; let i = index;" >
+    <ion-item *ngFor="let way of result; let i = index;">
       <ion-label>Ponto {{i+1}}:</ion-label>
-      <ion-input [disabled]="true" value="{{way | uppercase}}" ></ion-input>
+      <ion-input [disabled]="true" value="{{way | uppercase}}"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label>Destino:</ion-label>
       <ion-input [disabled]="true" value="{{destination | uppercase}}"></ion-input>
-      <button ion-button  (click)="remove()" icon-right icon-only>
+      <button ion-button (click)="remove()" icon-right icon-only>
         <ion-icon name="remove"></ion-icon>
       </button>
     </ion-item>
