--- a/src/pages/route/route.html
+++ b/src/pages/route/route.html
@@ -24,26 +24,31 @@
 <ion-content padding>
 
 
-  <ion-list *ngIf="!hasResult()">
-
-
+  <ion-list id="list" *ngIf="!hasResult()">
 
     <ion-item>
       <ion-label floating>Origem:</ion-label>
-      <ion-input [(ngModel)]="origin" value="{{origin | uppercase}}" (click)="showModal()"></ion-input>
-      <button ion-button (click)="showModal()" icon-right icon-only>
-        <ion-icon name="search"></ion-icon>
+      <ion-input [(ngModel)]="origin" value="{{origin}}" (dblclick)="showModal('origin')"></ion-input>
+      <button class="search"  ion-button (click)="showModal('origin')" color="light" item-right detail-none  icon-only>
+          <ion-icon name="search"></ion-icon>
       </button>
     </ion-item>
 
+
     <ion-item *ngFor="let way of waypoints; let i = index;">
-      <ion-label floating>Ponto {{i+1}}:</ion-label>
-      <ion-input [(ngModel)]="way.location" value="{{way.location | uppercase}}"></ion-input>
+      <ion-label floating>Parada {{i+1}}:</ion-label>
+      <ion-input [(ngModel)]="way.location" value="{{way.location}}" (dblclick)="showModal(i)"></ion-input>
+      <button class="search" ion-button (click)="showModal(i)" color="light" item-right detail-none  icon-only>
+          <ion-icon name="search"></ion-icon>
+      </button>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Destino:</ion-label>
-      <ion-input [(ngModel)]="destination" [disabled]="sameDestination" value="{{destination | uppercase}}"></ion-input>
+      <ion-input [(ngModel)]="destination" [disabled]="sameDestination" value="{{destination}}" (dblclick)="showModal('destination')"></ion-input>
+      <button class="search"  ion-button (click)="showModal('destination')" color="light" item-right detail-none  icon-only>
+          <ion-icon name="search"></ion-icon>
+      </button>
     </ion-item>
     <ion-item>
       <ion-label stacked>Destino é o mesmo local de origem?</ion-label>
@@ -55,6 +60,10 @@
   </ion-list>
 
   <ion-list *ngIf="hasResult()">
+    <ion-list-header>
+      {{time | date: 'H:mm': 'UTC'}}
+    </ion-list-header>
+
     <ion-item>
       <ion-textarea [disabled]="true">Melhor rota:</ion-textarea>
     </ion-item>
@@ -64,7 +73,7 @@
     </ion-item>
 
     <ion-item *ngFor="let way of result; let i = index;">
-      <ion-label>Ponto {{i+1}}:</ion-label>
+      <ion-label>Parada {{i+1}}:</ion-label>
       <ion-input [disabled]="true" value="{{way | uppercase}}"></ion-input>
     </ion-item>
 
