--- a/src/pages/result/result.html
+++ b/src/pages/result/result.html
@@ -9,33 +9,41 @@
   <ion-navbar>
     <ion-title>Rota</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-  <ion-list >
-    <ion-list-header >
-      <ion-label >{{distance | number: '2.1-1' }} km</ion-label>
-    </ion-list-header>
+  <ion-list>
+    <ion-item>
+      <ion-grid>
+        <ion-row >
+          <ion-col col-2>
+            <ion-icon name="information-circle"></ion-icon>
+            <ion-badge item-right>{{distance | number: '2.1-1' }} km</ion-badge>
+            <ion-icon name="time"></ion-icon>
+            <ion-badge item-right>{{time | secondsToTime}}</ion-badge>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
+    </ion-item>
     <ion-item>
       <ion-label>Origem:</ion-label>
-      <ion-input [disabled]="true" value="{{origin | uppercase}}"></ion-input>
+      <ion-textarea [disabled]="true" [readonly]="true" value="{{origin | uppercase}}"
+                   (press)="showDetail(origin)"></ion-textarea>
     </ion-item>
 
     <ion-item *ngFor="let way of result; let i = index;">
       <ion-label>Parada {{i+1}}:</ion-label>
-      <ion-input [disabled]="true" value="{{way | uppercase}}"></ion-input>
+      <ion-textarea [disabled]="true" [readonly]="true" value="{{way | uppercase}}"
+                   (press)="showDetail(way)"></ion-textarea>
     </ion-item>
 
     <ion-item>
       <ion-label>Destino:</ion-label>
-      <ion-input [disabled]="true" value="{{destination | uppercase}}"></ion-input>
+      <ion-textarea [disabled]="true" [readonly]="true" value="{{destination | uppercase}}" 
+                    (press)="showDetail(destination)"></ion-textarea>
     </ion-item>
-    <ion-item class="button" hidden>
-      <button ion-button (click)="back()" outline round large>Voltar</button>
-    </ion-item>
+
   </ion-list>
 
 </ion-content>
